--- a/Purchasing.Mvc/Views/Order/_ReviewOrderDetails.cshtml
+++ b/Purchasing.Mvc/Views/Order/_ReviewOrderDetails.cshtml
@@ -1,4 +1,5 @@
-﻿@model ReviewOrderViewModel
+﻿@using Purchasing.Mvc.Helpers
+@model ReviewOrderViewModel
 <section id="order-details" class="ui-corner-all display-form">
 
     <header class="ui-corner-top ui-widget-header showInNav">
@@ -69,9 +70,20 @@
                     <li>
                         <span>Order Type:</span><strong>@Model.Order.OrderType.Name @(!string.IsNullOrEmpty(Model.Order.KfsDocType) ? string.Format("({0})", Model.Order.KfsDocType) : string.Empty)</strong>
                     </li>
-                    <li>
-                        <span>Post Order Status</span><strong>@Model.Order.PostStatus</strong>
-                    </li>
+                    @if (Model.Complete)
+                     {
+                         <li>
+                             <span>Post Order Status</span>
+                             @if (Model.CanReceiveItems)
+                             {
+                                 @Html.DropDownListFor(a=> a.Order.PostStatus, SelectLists.PostStatusList)
+                             }
+                             else
+                             {
+                                 <strong>@Model.Order.PostStatus</strong>
+                             }
+                         </li>
+                     }
                     <li>
                         <span>Order Notes:</span><strong id="orderNote" style="width:auto;">@(string.IsNullOrWhiteSpace(Model.Order.OrderNote) ? "[None]" : Model.Order.OrderNote)</strong>
                         <a id="edit-ordernotes" href="#" class="ui-icon ui-icon-pencil" title="Edit Order Notes"></a>
