Minor update to charts.

--- a/Purchasing.Mvc/Views/Report/ProcessingTimeSummary.cshtml
+++ b/Purchasing.Mvc/Views/Report/ProcessingTimeSummary.cshtml
@@ -10,76 +10,103 @@
 
 }
 
-<h2>ProcessingTimeSummary</h2>
 
-<p>
-    Averages:<br />Average Time to Complete: @TimeSpan.FromMinutes(Model.Columns.AverageTimeToCompletion.Value).ToString("dd':'hh':'mm")<br/>
-    Average time to Approve: @TimeSpan.FromMinutes(Model.Columns.AverageTimeToApprover.Value).ToString("dd':'hh':'mm")<br />
-    Average time to Account Manager: @TimeSpan.FromMinutes(Model.Columns.AverageTimeToAccountManagers.Value).ToString("dd':'hh':'mm")<br />
-    Average time to Purchase: @TimeSpan.FromMinutes(Model.Columns.AverageTimeToPurchaser.Value).ToString("dd':'hh':'mm")
-</p>
+
 <script src="//code.highcharts.com/4.1/highcharts.js"></script>
 <script src="http://code.highcharts.com/modules/heatmap.js"></script>
 <script src="http://code.highcharts.com/modules/treemap.js"></script>
-<div id="treeChart"></div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.2/underscore-min.js"></script>
 
-<div id="container" style="min-width: 310px; height: 400px; max-width: 600px; margin: 0 auto"></div>
+<div id="treeChart" style="display: inline-block; width: 49%;"></div>
+
+<div id="container" style="display: inline-block; width: 49%;"></div>
 <script>
     $(function() {
         var data = @Html.Raw(JsonConvert.SerializeObject(Model.JsonData));
-       
+
         var points = [],
-		region_p,
-		region_val,
-		region_i,
-		country_p,
-		country_i,
-		cause_p,
-		cause_i,
-		cause_name = [];
-        cause_name['Communicable & other Group I'] = 'Communicable diseases';
-        cause_name['Noncommunicable diseases'] = 'Non-communicable diseases';
-        cause_name['Injuries'] = 'Injuries';
-        region_i = 0,
-        roles = ['approver','accountManager','purchaser'];
+        role_p,
+        role_val,
+        role_i,
+        person_p,
+        person_i,
+        order_p,
+        order_i,
+
+        role_i = 0,
+        roles = ['approver', 'accountManager', 'purchaser'];
 
         for (var roleIndex in roles) {
-            region_val = 0;
-            region_p = {
+            role_val = 0;
+            role_p = {
                 id: "id_" + roleIndex,
                 name: roles[roleIndex],
-                color: Highcharts.getOptions().colors[roleIndex]
+                color: Highcharts.getOptions().colors[roleIndex],
+                displayName: roles[roleIndex]
             };
-            country_i = 0;
-            var orders = data[region_p.name];
-            for (var orderIndex in orders) {
-                country_p = {
-                    id: region_p.id + "_" + orderIndex,
-                    name: orders[orderIndex].personId,
-                    parent: region_p.id
+            person_i = 0;
+            var orders = data[role_p.name];
+
+            var groupedByPerson = _.groupBy(orders, 'personId');
+
+            for (var person in groupedByPerson) {
+                var personName = person;
+
+                person_p = {
+                    id: role_p.id + "_" + personName,
+                    name: personName,
+                    parent: role_p.id,
+                    displayName: groupedByPerson[person][0].personName
                 };
-                points.push(country_p);
-                cause_i = 0;
-               
-                    cause_p = {
-                        id: country_p.id + "_" + orders[orderIndex].orderId,
-                        name: orders[orderIndex].orderId,
-                        parent: country_p.id,
-                        value: Math.round(orders[orderIndex].minutes)
+                points.push(person_p);
+
+                var ordersForPerson = groupedByPerson[person];
+                for (var orderIndex in ordersForPerson) {
+                    order_p = {
+                        id: person_p.id + "_" + ordersForPerson[orderIndex].orderId,
+                        name: ordersForPerson[orderIndex].orderId,
+                        parent: person_p.id,
+                        value: Math.round(ordersForPerson[orderIndex].minutes),
+                        displayName: ordersForPerson[orderIndex].orderId
                     };
-                    region_val += cause_p.value;
-                    points.push(cause_p);
-                    cause_i++;
-                
-                country_i++;
+
+                    if (!order_p.value) {
+                        order_p.value = 0;
+                    }
+                    role_val += order_p.value;
+                    points.push(order_p);
+                    order_i++;
+                }
+
+                person_i++;
             }
-            region_p.value = Math.round(region_val / country_i);
-            points.push(region_p);
-            region_i++;
+            role_p.value = Math.round(role_val / person_i);
+            points.push(role_p);
+            role_i++;
+
         }
+        console.log(points);
+
         var chart = new Highcharts.Chart({
             chart: {
                 renderTo: 'treeChart'
+            },
+            tooltip: {
+                backgroundColor: '#FCFFC5',
+                pointFormatter: function () {
+                    var sec_num = parseInt(this.value, 10);
+                    var days = Math.floor(sec_num / 1440);
+                    var hours   = Math.floor((sec_num - (days*1440) )/ 60);
+                    var minutes = Math.floor((sec_num - (days*1440) - (hours * 60)) );
+
+                    if (days < 10) {days = "0"+days;}
+                    if (hours   < 10) {hours   = "0"+hours;}
+                    if (minutes < 10) {minutes = "0"+minutes;}
+
+                    var time    = days+'d:'+hours+'h:'+minutes+'m';
+                    return this.displayName+': '+time;
+                },
+                shared: true
             },
             series: [{
                 type: "treemap",
@@ -99,39 +126,52 @@
                 data: points
             }],
             subtitle: {
-                text: 'Click points to drill down. Source: <a href="http://apps.who.int/gho/data/node.main.12?lang=en">WHO</a>.'
+                text: 'Click points to drill down.'
             },
+            credits: {enabled: false},
             title: {
-                text: 'Global Mortality Rate 2012, per 100 000 population'
+                text: 'Time to Completion By Role and Person'
             }
         });
     });
 
-    $(function () { 
+    $(function () {
         $('#container').highcharts({
             chart: {
                 plotBackgroundColor: null,
                 plotBorderWidth: null,
                 plotShadow: false
             },
-            title: {
-                text: null
-            },
             tooltip: {
-                pointFormat: '{series.name}: <b>{point.y}</b>'
+                pointFormatter: function () {
+                    var sec_num = parseInt(this.y, 10);
+                    var days = Math.floor(sec_num / 1440);
+                    var hours   = Math.floor((sec_num - (days*1440) )/ 60);
+                    var minutes = Math.floor((sec_num - (days*1440) - (hours * 60)) );
+
+                    if (days < 10) {days = "0"+days;}
+                    if (hours   < 10) {hours   = "0"+hours;}
+                    if (minutes < 10) {minutes = "0"+minutes;}
+
+                    var time    = days+'d:'+hours+'h:'+minutes+'m';
+                    return time;
+                }
             },
             credits: {enabled: false},
+            subtitle: {
+                text: 'Average total time to completion: @TimeSpan.FromMinutes(Model.Columns.AverageTimeToCompletion.Value).ToString("dd'd:'hh'h:'mm'm'")'
+            },
+            title: {
+                text: 'Average Time to Task Completion By Role'
+            },
             plotOptions: {
                 pie: {
                     allowPointSelect: true,
                     cursor: 'pointer',
                     dataLabels: {
-                        enabled: true,
-                        format: '<b>{point.name}</b>: {point.percentage:.1f} %',
-                        style: {
-                            color: (Highcharts.theme && Highcharts.theme.contrastTextColor) || 'black'
-                        }
-                    }
+                        enabled: false
+                    },
+                    showInLegend: true
                 }
             },
             series: [{
@@ -148,9 +188,7 @@
 
 
 </script>
-<p>
-    All times are displayed as (Days:Hours:Minutes)
-</p>
+
 <table class="dt-table no-icon-table">
     <thead>
         <tr>
@@ -190,13 +228,13 @@
                 <td>
                     @if (item.MinutesToCompletion != null)
                     {
-                        @TimeSpan.FromMinutes(item.MinutesToCompletion.Value).ToString("dd':'hh':'mm")
+                        @TimeSpan.FromMinutes(item.MinutesToCompletion.Value).ToString("dd'd:'hh'h:'mm'm'")
                     }
                 </td>
                 <td>
                     @if (item.MinutesToApprove != null)
                     {
-                        @TimeSpan.FromMinutes(item.MinutesToApprove.Value).ToString("dd':'hh':'mm")
+                        @TimeSpan.FromMinutes(item.MinutesToApprove.Value).ToString("dd'd:'hh'h:'mm'm'")
                     }
                 </td>
                 <td>
@@ -205,7 +243,7 @@
                 <td>
                     @if (item.MinutesToAccountManagerComplete != null)
                     {
-                        @TimeSpan.FromMinutes(item.MinutesToAccountManagerComplete.Value).ToString("dd':'hh':'mm")
+                        @TimeSpan.FromMinutes(item.MinutesToAccountManagerComplete.Value).ToString("dd'd:'hh'h:'mm'm'")
                     }
                 </td>
                 <td>
@@ -214,7 +252,7 @@
                 <td>
                     @if (item.MinutesToPurchaserComplete != null)
                     {
-                        @TimeSpan.FromMinutes(item.MinutesToPurchaserComplete.Value).ToString("dd':'hh':'mm")
+                        @TimeSpan.FromMinutes(item.MinutesToPurchaserComplete.Value).ToString("dd'd:'hh'h:'mm'm'")
                     }
                 </td>
                 <td>
