--- a/Purchasing.Mvc/Views/Report/Index.cshtml
+++ b/Purchasing.Mvc/Views/Report/Index.cshtml
@@ -98,10 +98,11 @@
 
         <header class="ui-corner-top ui-widget-header">Reports</header>
         <div class="section-contents">
-            @ContainerFor("Workload Report By Workgroup", "Workload")
+            @ContainerFor("Workload y Workgroup", "Workload")
             @ContainerFor("Purchaser Daily Workload", "PurchaserWorkLoad")
-            @ContainerFor("Purchaser Processing Time Report By Workgroup", "ProcessingTime")
-            @ContainerFor("Permissions Report", "Permissions")
+            @ContainerFor("Purchaser Processing Time By Workgroup", "ProcessingTime")
+            @ContainerFor("Processing Time By Workgroup", "ProcessingTimeSummary")
+            @ContainerFor("Permissions", "Permissions")
             <div style="clear: both;"></div>
 
         </div>
