--- a/Purchasing.Mvc/Views/Order/_ReviewOrderDetails.cshtml
+++ b/Purchasing.Mvc/Views/Order/_ReviewOrderDetails.cshtml
@@ -73,22 +73,26 @@
                     if (Model.Complete)
                      {
                          <li>
+                             
                              <span>Post Order Status</span>
-                             @if (Model.CanReceiveItems)
-                             {
-                                 @Html.DropDownListFor(a=> a.Order.PostStatus, SelectLists.PostStatusList, new { @class="PostStatusDDL"})
-                                 <span class="poststatus-loader" style="display: none;" >
-                                     <img src='@Url.Image("ajax-loader.gif")' />
-                                 </span>
-                                <span id="poststatus-ok" style="display: none;">
-                                    <a href="#" class="ui-icon ui-icon-check"></a>
-                                </span>
+                             <span style="white-space:nowrap">
+    @if (Model.CanReceiveItems)
+    {
+        @Html.DropDownListFor(a => a.Order.PostStatus, SelectLists.PostStatusList, new { @class = "PostStatusDDL" })
+        <span class="poststatus-loader" style="display: none;">
+            <img src='@Url.Image("ajax-loader.gif")' />
+        </span>
+        <span id="poststatus-ok" style="display: none;">
+            <a href="#" class="ui-icon ui-icon-check"></a>
+        </span>
 
-                             }
-                             else
-                             {
-                                 <strong>@Model.Order.PostStatus</strong>
-                             }
+    }
+    else
+    {
+        <strong>@Model.Order.PostStatus</strong>
+    }
+</span>
+
                          </li>
                      }
                     <li>
