Disable the Record Items if it is locked (assigned to an AP User)

--- a/Purchasing.Mvc/Views/Order/PayInvoice.cshtml
+++ b/Purchasing.Mvc/Views/Order/PayInvoice.cshtml
@@ -238,7 +238,7 @@
         <ul>
             <li class="apply">
                 <label>&nbsp;</label>
-                <input class="button" id="RecordButton" type="button" value="Record Items" />
+                <input class="button" id="RecordButton" type="button" value="Record Items" @disabled />
             </li>
         </ul>
     </div>
