--- a/Purchasing.Mvc/Views/Order/_ReviewOrderDetails.cshtml
+++ b/Purchasing.Mvc/Views/Order/_ReviewOrderDetails.cshtml
@@ -1,4 +1,5 @@
-﻿@using Purchasing.Mvc.Helpers
+﻿@using NPOI.SS.Formula.Functions
+@using Purchasing.Mvc.Helpers
 @model ReviewOrderViewModel
 <section id="order-details" class="ui-corner-all display-form">
 
@@ -76,7 +77,7 @@
                              
                              <span>Post Order Status</span>
                              <span style="white-space:nowrap">
-    @if (Model.CanReceiveItems)
+    @if (Model.CanReceiveItems && (ViewBag.HideEditDialogue == null || (bool)ViewBag.HideEditDialogue == false))
     {
         @Html.DropDownListFor(a => a.Order.PostStatus, SelectLists.PostStatusList, new { @class = "PostStatusDDL" })
         <span class="poststatus-loader" style="display: none;">
