--- a/Purchasing.Mvc/Views/Order/_ReviewOrderDetails.cshtml
+++ b/Purchasing.Mvc/Views/Order/_ReviewOrderDetails.cshtml
@@ -75,7 +75,7 @@
                      {
                          <li>
                              
-                             <span>Post Order Status</span>
+                             <span>Post Order Status:</span>
                              <span style="white-space:nowrap">
     @if (Model.CanReceiveItems && (ViewBag.HideEditDialogue == null || (bool)ViewBag.HideEditDialogue == false))
     {
