--- a/Purchasing.Mvc/Views/Order/_ReviewOrderDetails.cshtml
+++ b/Purchasing.Mvc/Views/Order/_ReviewOrderDetails.cshtml
@@ -76,7 +76,7 @@
                          <li>
                              
                              <span>Post Order Status:</span><span style="white-space:nowrap">
-                                 @if (Model.CanReceiveItems && (ViewBag.HideEditDialogue == null || (bool)ViewBag.HideEditDialogue == false))
+                                 @if (Model.CanAssignApUser && (ViewBag.HideEditDialogue == null || (bool)ViewBag.HideEditDialogue == false))
                                  {
                                      @Html.DropDownListFor(a => a.Order.PostStatus, SelectLists.PostStatusList, new { @class = "PostStatusDDL" })
                                      <span class="poststatus-loader" style="display: none;">
